<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/>
    </parent>

    <groupId>ru.devinvader</groupId>
    <artifactId>market</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>market</name>
    <description>Market app for Yandex Practicum</description>

    <modules>
        <module>store</module>
        <module>payment</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <keycloak.version>26.2.0</keycloak.version>
    </properties>
</project>